commitindex: Iterations endpoint POST accepts bugzilla api key and user in headers to authenticate. (Bug 1352511) r=smacleod
MozReview-Commit-ID: 3Jt2UOH06WB

--HG--
extra : rebase_source : 81669990096a4b85802c6f1303dc485aecdfc94b
